# sample-agentic-chatbot-accelerator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.ash/: .ash.yaml  bandit.yaml
.claude/: settings.json
.claude/.claude-plugin/: marketplace.json
.claude/plugins/agent-creator/: README.md
.claude/skills/commit/: REFERENCE.md  SKILL.md
.claude/skills/iac-config-generator/: SKILL.md
.claude/skills/mirror-cdk-to-terraform/: SKILL.md
.claude/skills/prep-pr/: SKILL.md
docs/diagrams/: architecture.xml
docs/src/: agent-factory.md  api.md  architecture.md  development-guide.md  evaluation.md  expanding-ai-tools.md  how-to-deploy.md  index.md  kb-management.md  observability-insights.md  skills.md  swarm-agents.md  troubleshooting.md
docs/src/agentic-patterns/: agents-as-tools.md  graph-agents.md  single-agent.md  swarm-agents.md
iac-cdk/: .graphqlconfig.yml  package-lock.json  package.json  tsconfig.json
iac-cdk/lib/: aca-stack.ts  builder-stack.ts
iac-cdk/lib/agent-core/: index.ts
iac-cdk/lib/api/: agent-core-runtime.ts  evaluation-api.ts  experiments-api.ts  http-api-backend.ts  index.ts  knowledge-base.ts  websocket-api-backend.ts  websocket-resolvers.ts
iac-cdk/lib/authentication/: index.ts
iac-cdk/lib/cleanup/: index.ts
iac-cdk/lib/codebuild-builder/: codebuild-docker-image.ts  codebuild-npm-build.ts  codebuild-pip-bundle.ts  codebuild-pip-layer.ts  index.ts
iac-cdk/lib/data-processing/: index.ts
iac-cdk/lib/experiments-batch/: index.ts
iac-cdk/scripts/: build.sh
iac-terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
iac-terraform/scripts/: build-image.sh
lib/agent-core/: index.ts
lib/api/: evaluation-api.ts  experiments-api.ts  http-api-backend.ts  index.ts
lib/experiments-batch/: index.ts
lib/shared/: types.ts
lib/user-interface/: index.ts
src/agent-core/docker/: Dockerfile  app.py  entrypoint.sh  pyproject.toml  requirements.txt
src/agent-core/docker-agents-as-tools/: Dockerfile  app.py  pyproject.toml  requirements.txt
src/agent-core/docker-agents-as-tools/src/: callbacks.py  factory.py  registry.py  types.py
src/agent-core/docker-swarm/: Dockerfile  app.py  pyproject.toml  requirements.txt
src/agent-core/docker-swarm/src/: callbacks.py
src/agent-core/docker/src/: callbacks.py  factory.py  structured_output.py  types.py
(+226 files in other folders)
